# multi-chain-crowdfunding-analyses

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  multi-chain-crowdfunding-analyses.sln  package-lock.json
benchmarks/: batch_run.py  ckzg.py  collect_metrics.py  config.py  convert_idl.py  deploy_evm.py  evm_utils.py  requirements.txt  run_client_benchmark.py  run_tests.py  run_throughput_client.py  solana_utils.py  stats_significance.py  throughput_test.py
clients/dotnet/: .env.example  CrowdfundingClient.csproj  Program.cs
clients/python/: README.md  __main__.py  requirements.txt
clients/ts/: .env.example  package-lock.json  package.json
clients/ts-evm/: .env.example  package-lock.json  package.json  tsconfig.json
contracts/evm/: .env.example  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/solana/: Anchor.toml  Cargo.toml  deploy.sh  package-lock.json  package.json  tsconfig.json
contracts/solana/programs/crowdfunding/: Cargo.toml
contracts/solana/programs/crowdfunding/src/: lib.rs  state.rs
contracts/solana/programs/crowdfunding/src/instructions/: contribute.rs  finalize.rs  initialize_campaign.rs  refund.rs  withdraw_milestone.rs
dashboard/: README.md  jest.config.js  package-lock.json  package.json
dashboard/__tests__/: load-results.test.ts  run-store.test.ts
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: CompareChart.tsx  ComparisonTable.tsx  FilterBar.tsx  GasChart.tsx  MetricCard.tsx  (+6 more)
docs/: analiza.md  architecture.md  measurements.md  scope.md  setup.md
scripts/: batch_run.py
(+121 files in other folders)
