[package]
name = "crowdfunding"
version = "0.1.0"
description = "Multi-chain crowdfunding — Solana/Anchor variant (V4)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crowdfunding"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "token_2022"] }
# Pin blake3 below 1.8.0 — >=1.8.0 uses edition 2024 (needs Rust 1.85+),
# but Solana platform tools v1.51 bundles Rust 1.84.
blake3 = "=1.7.0"
